# swisper_studio

./: .gitignore  COST_CALCULATION_ARCHITECTURE.md  CREATING_YOUR_FIRST_PROJECT.md  CURRENT_STATUS_AND_NEXT_STEPS.md  HANDOVER.md  HANDOVER_README.md  INTEGRATION_PACKAGE_FILES.txt  PARALLEL_DEV_SETUP.md  PHASE2.5_COMPLETE_SUMMARY.md  PHASE2.5_FINAL_SUMMARY.md  PHASE2.5_UAT_REPORT.md  PHASE2_HANDOVER.md  PHASE2_UAT_GUIDE.md  PHASE3_HANDOVER.md  PHASE3_WEEK2_HANDOVER.md  PHASE4_HANDOVER.md  PHASE5_3_AUTH_COMPLETE.md  PHASE5_SDK_HANDOVER.md  Q2_TRACING_TOGGLE_COMPLETE.md  QUICK_LOGIN_GUIDE.md  QUICK_REFERENCE_PHASE5.md  QUICK_START.md  QUICK_UAT_REFERENCE.md  README.md  READY_FOR_PRODUCTION_TESTING.md  SDK_FILE_CRITIQUE.md  SDK_FLEXIBILITY_ANALYSIS_AND_PROPOSAL.md  SDK_FLEXIBILITY_FIX_DEPLOYED.md  SDK_MIGRATION_v0.3.4_to_v0.4.0.md  SDK_READY_FOR_INTEGRATION.md  SDK_SIMPLIFICATION_PROPOSAL_FUTURE.md  SDK_STREAMING_TOKENS_LIMITATION.md  SDK_v0.2.1_CRITICAL_FIXES.md  SDK_v0.3.0_PRODUCTION_READY.md  SDK_v0.4.0_CRITICAL_ISSUES_FOUND.md  SDK_v0.4.0_IMPLEMENTATION_SUMMARY.md  SDK_v0.4.0_INTEGRATION_TEST_RESULTS.md  SDK_v0.4.0_LOG_ANALYSIS.md  SDK_v0.4.0_READY_FOR_SWISPER_TESTING.md  SESSION_COMPLETE_SDK_V05_SUMMARY.md  (+19 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20251102_phase2_observations_and_pricing.py  2025_11_01_1506_2ef79bc4acc7_initial_schema_trace_and_observation_.py  2025_11_02_0440_5aa929e5793b_add_projects_table.py  2025_11_02_0455_8b62cb96a693_add_project_foreign_key_to_traces.py  2025_11_02_1701_130a927e2862_add_project_environments_and_config_.py  2025_11_03_0633_1b23175c5a26_add_users_and_auth.py  2025_11_03_0742_5be6d2b38e49_add_github_token_to_projects.py  2025_11_05_0707_c85a4ae4ef21_remove_user_id_foreign_key_from_traces.py  2025_11_06_1438_65a68f36fae9_add_tracing_enabled_to_projects.py  2025_11_06_add_kvant_model_pricing_chf.py  2025_11_07_0431_f68a1806c21d_add_type_and_description_to_model_.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  database.py  permissions.py  security.py
backend/app/data/: agent_graphs.json
backend/app/models/: __init__.py  base.py  config_version.py  enums.py  graph.py  model_pricing.py  observation.py  project.py  project_environment.py  trace.py  user.py
backend/app/services/: observability_consumer.py  tracing_config_service.py
backend/tests/: __init__.py  conftest.py  sdk_test_type_detection.py  test_models.py  test_models_phase2.py  test_permissions.py
backend/tests/api/: test_auth.py  test_config_versions.py  test_rbac.py  (+7 more)
sdk/: README.md  SDK_PHASE5_2_README.md  pyproject.toml  test_heartbeat.py  test_sdk_locally.py
sdk/swisper_studio_sdk/: __init__.py
(+276 files in other folders)
