[project]
name = "swisper-studio-sdk"
version = "0.1.0"
description = "SwisperStudio SDK - Tracing integration for Swisper"
authors = [{name = "SwisperStudio Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.2",
    "langgraph>=0.0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

