[project]
name = "swisper-studio-sdk"
version = "0.4.1"
description = "SwisperStudio SDK - Tracing integration for Swisper"
authors = [{name = "SwisperStudio Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.2",
    "langgraph>=1.0.0,<2.0.0",
    "langgraph-checkpoint>=2.1.0,<3.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swisper_studio_sdk"]

